test/Exercism.Analyzers.CSharp.IntegrationTests/Solutions/Errors/WritesToConsole/ConsoleOutWrite/Errors.cs
using System;

public static class Errors
{
    public static void Test()
    {
        Console.Out.Write("Test");
    }
}